Started implementing the automatic object creation and algorithm linking. The ConfigParser is responsible for parsing the yaml file, creating each tracked object and its necessary algorithms. There's also the AlgorithmFactory, responsible for the actual creation of algorithms.

--- a/config/vision.yaml
+++ b/config/vision.yaml
@@ -1,1 +1,10 @@
 vision:
+    object_list: ["dummy_object", "dummy_object_2"]
+
+    dummy_object:
+        segmentation_algorithm: "DummySegmentationAlgorithm"
+        identification_algorithm: "DummyIdentificationAlgorithm"
+
+    dummy_object_2:
+        segmentation_algorithm: "DummySegmentationAlgorithm"
+        identification_algorithm: "DummyIdentificationAlgorithm"
