--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,8 @@ add_executable(vision_node
   src/vision/identification_algorithm.cpp
   src/vision/tracker.cpp
   src/vision/tracked_object.cpp
+  src/vision/config_parser.cpp
+  src/vision/algorithm_factory.cpp
   src/vision/dummy_segmentation_algorithm.cpp
   src/vision/dummy_identification_algorithm.cpp)
 add_dependencies(vision_node unball_gencpp)
