Created the Algorithm base class.
The SegmentationAlgorithm and IdentificationAlgorithm classes now inherit from the Algorithm base class. I'll use this to reduce code
duplication.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ add_executable(vision_node
   src/vision/vision_node.cpp
   src/vision/vision.cpp
   src/vision/raw_image.cpp
+  src/vision/algorithm.cpp
   src/vision/segmenter.cpp
   src/vision/segmentation_algorithm.cpp
   src/vision/identifier.cpp
