--- a/config/vision.yaml
+++ b/config/vision.yaml
@@ -1,5 +1,9 @@
 vision:
-    object_list: ["dummy_object", "dummy_object_2", "dummy_object_3", "dummy_object_4"]
+    object_list:
+     - "dummy_object"
+     - "dummy_object_2"
+     - "dummy_object_3"
+     - "dummy_object_4"
 
     dummy_object:
         segmentation_algorithm: "DummySegmentationAlgorithm"
