--- a/config/vision.yaml
+++ b/config/vision.yaml
@@ -1,4 +1,8 @@
 vision:
+    calibration:
+        calibrate_match_matrix: true
+        calibrate_rectify_matrix: true
+
     object_list:
      - "dummy_object"
      - "dummy_object_2"
