--- a/config/vision.yaml
+++ b/config/vision.yaml
@@ -4,27 +4,8 @@ vision:
         calibrate_rectify_matrix: true
 
     object_list:
-     - "dummy_object"
-     - "dummy_object_2"
-     - "dummy_object_3"
-     - "dummy_object_4"
+     - "ball"
 
-    dummy_object:
-        segmentation_algorithm: "DummySegmentationAlgorithm"
+    ball:
+        segmentation_algorithm: "BallInRangeColorSegmentation"
         identification_algorithm: "DummyIdentificationAlgorithm"
-
-    dummy_object_2:
-        segmentation_algorithm: "DummySegmentationAlgorithm"
-        segmentation_arguments: "Arg1"
-        identification_algorithm: "DummyIdentificationAlgorithm"
-
-    dummy_object_3:
-        segmentation_algorithm: "DummySegmentationAlgorithm"
-        identification_algorithm: "DummyIdentificationAlgorithm"
-        identification_arguments: "Arg1 Arg2 Arg3"
-
-    dummy_object_4:
-        segmentation_algorithm: "DummySegmentationAlgorithm"
-        segmentation_arguments: "Arg2"
-        identification_algorithm: "DummyIdentificationAlgorithm"
-        identification_arguments: "Arg1 Arg2 Arg3"
