--- a/config/vision.yaml
+++ b/config/vision.yaml
@@ -4,8 +4,9 @@ vision:
         calibrate_rectify_matrix: true
 
     object_list:
-     - "ball"
+     - "robots"
 
-    ball:
-        segmentation_algorithm: "BallInRangeColorSegmentation"
-        identification_algorithm: "DummyIdentificationAlgorithm"
+    robots:
+      segmentation_algorithm: "FindRobots"
+
+    
