--- a/config/vision.yaml
+++ b/config/vision.yaml
@@ -1,7 +1,7 @@
 vision:
     calibration:
-        calibrate_match_matrix: true
-        calibrate_rectify_matrix: true
+        calibrate_match_matrix: false
+        calibrate_rectify_matrix: false
 
     object_list:
      - "ball"
