--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,8 +45,26 @@ link_directories(
   ${SDFormat_LIBRARY_DIRS}
 )
 
-file(GLOB_RECURSE vision_node_sources src/vision/*.cpp)
-add_executable(vision_node ${vision_node_sources})
+
+add_executable(vision_node 
+  src/vision/vision_node.cpp
+  src/vision/vision.cpp
+  src/vision/algorithm.cpp
+  src/vision/algorithm_factory.cpp
+  src/vision/ball_in_range_color_segmentation.cpp
+  src/vision/config_parser.cpp
+  src/vision/dummy_identification_algorithm.cpp
+  src/vision/dummy_segmentation_algorithm.cpp
+  src/vision/findrobots.cpp
+  src/vision/identification_algorithm.cpp
+  src/vision/identifier.cpp
+  src/vision/raw_image.cpp
+  src/vision/segmentation_algorithm.cpp
+  src/vision/segmenter.cpp
+  src/vision/tracked_object.cpp
+  src/vision/tracker.cpp
+  src/vision/vision.cpp
+  src/vision/vision_gui.cpp)
 add_dependencies(vision_node unball_gencpp)
 target_link_libraries(vision_node ${catkin_LIBRARIES})
 
@@ -60,8 +78,13 @@ add_executable(dummy_image
 add_dependencies(dummy_image unball_gencpp)
 target_link_libraries(dummy_image ${catkin_LIBRARIES})
 
-file(GLOB_RECURSE calibration_node_sources src/calibration/*.cpp)
-add_executable(calibration_node ${calibration_node_sources})
+add_executable(calibration_node 
+  src/calibration/calibration_node.cpp
+  src/calibration/capture_points.cpp
+  src/calibration/depth_fix.cpp
+  src/calibration/file_manager.cpp
+  src/calibration/matching.cpp
+  src/calibration/select_field.cpp)
 add_dependencies(calibration_node unball_gencpp)
 target_link_libraries(calibration_node ${catkin_LIBRARIES})
 
