Implementation of findRobots needs ajustments (noise reduction borders)

--- a/config/vision.yaml
+++ b/config/vision.yaml
@@ -5,7 +5,7 @@ vision:
 
     object_list:
      - "ball"
-     # - "robots"
+     - "robots"
 
     ball:
       segmentation_algorithm: "BallInRangeColorSegmentation"
