Changes made to findRobots moving its identification to robot_id...

--- a/config/vision.yaml
+++ b/config/vision.yaml
@@ -13,5 +13,5 @@ vision:
 
     robots:
       segmentation_algorithm: "FindRobots"
-      identification_algorithm: "DummyIdentificationAlgorithm"
+      identification_algorithm: "RobotIdentification"
 
