--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,11 @@ add_executable(vision_node
 add_dependencies(vision_node unball_gencpp)
 target_link_libraries(vision_node ${catkin_LIBRARIES})
 
+add_executable(test_calibration
+  src/test_calibration/test_calibration_node.cpp)
+add_dependencies(test_calibration unball_gencpp)
+target_link_libraries(test_calibration ${catkin_LIBRARIES})
+
 add_executable(dummy_camera
   src/dummy_camera/dummy_camera.cpp)
 add_dependencies(dummy_camera unball_gencpp)
