--- a/data/color_calibration.yaml
+++ b/data/color_calibration.yaml
@@ -1,7 +1,16 @@
 %YAML:1.0
-Blue:
-   Min: [ 94., 133., 154., 0. ]
-   Max: [ 159., 215., 256., 0. ]
-Yellow:
-   Min: [ 16., 119., 156., 0. ]
-   Max: [ 63., 241., 256., 0. ]
+Orange: !!opencv-matrix
+   rows: 1
+   cols: 3
+   dt: i
+   data: [ 74, 0, 0 ]
+Blue: !!opencv-matrix
+   rows: 1
+   cols: 3
+   dt: i
+   data: [ 74, 0, 0 ]
+Yellow: !!opencv-matrix
+   rows: 1
+   cols: 3
+   dt: i
+   data: [ 74, 0, 0 ]
