Dual segmentation by color

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,8 @@ add_executable(vision_node
   src/vision/config_parser.cpp
   src/vision/dummy_identification_algorithm.cpp
   src/vision/dummy_segmentation_algorithm.cpp
-  src/vision/findrobots.cpp
+  src/vision/find_robots_by_depth.cpp
+  src/vision/find_robots_by_color.cpp
   src/vision/robot_identification.cpp  
   src/vision/identification_algorithm.cpp
   src/vision/identifier.cpp
