--- a/config/vision.yaml
+++ b/config/vision.yaml
@@ -2,7 +2,10 @@ vision:
     calibration:
         calibrate_match_matrix: false
         calibrate_rectify_matrix: false
-        calibrate_team_color: false
+        calibrate_team_color: true
+    
+    team:
+      allies: "blue"
 
     object_list:
      - "ball"
