--- a/config/vision.yaml
+++ b/config/vision.yaml
@@ -10,7 +10,7 @@ vision:
     object_list:
      - "ball"
      - "our_robots"
-     # - "opponent_robots"
+     - "opponent_robots"
 
     ball:
       segmentation_algorithm: "BallInRangeColorSegmentation"
@@ -25,6 +25,6 @@ vision:
     opponent_robots:
       segmentation_algorithm: "FindRobotsColor"
       segmentation_arguments: "Blue"
-      identification_algorithm: "DummyIdentificationAlgorithm"
+      identification_algorithm: "RobotIdentification"
       identification_arguments: "Blue"
 
