--- a/config/vision.yaml
+++ b/config/vision.yaml
@@ -1,19 +1,17 @@
 vision:
     camera:
-      show_image: false
+      show_image: true
 
-    calibration:
+    calibration: 
         calibrate_match_matrix: false
-        calibrate_rectify_matrix: true
-        calibrate_team_color: true
-    team:
-      allies: "blue"
+        calibrate_rectify_matrix: false
+        calibrate_team_color: false
 
     object_list:
-     # - "dummy_object"
-     # - "ball"
+     # - "dummy_object" 
+     - "ball"
      - "our_robots"
-     # - "opponent_robots"
+     - "opponent_robots"
 
     ball:
       segmentation_algorithm: "BallInRangeColorSegmentation"
@@ -21,15 +19,15 @@ vision:
 
     our_robots:
       segmentation_algorithm: "FindRobotsColor"
-      segmentation_arguments: "Yellow"
-      identification_algorithm: "RobotIdentification"
-      identification_arguments: "Yellow"
-
-    opponent_robots:
-      segmentation_algorithm: "FindRobotsColor"
       segmentation_arguments: "Blue"
       identification_algorithm: "RobotIdentification"
       identification_arguments: "Blue"
+
+    opponent_robots:
+      segmentation_algorithm: "FindRobotsColor"
+      segmentation_arguments: "Yellow"
+      identification_algorithm: "RobotIdentification"
+      identification_arguments: "Yellow"
     
     dummy_object:
       segmentation_algorithm: "DummySegmentationAlgorithm"
