--- a/data/color_calibration.yaml
+++ b/data/color_calibration.yaml
@@ -3,15 +3,15 @@ Yellow: !!opencv-matrix
    rows: 2
    cols: 3
    dt: i
-   data: [ 3, 205, 236, 44, 256, 256 ]
+   data: [ 1, 255, 254, 35, 256, 256 ]
 Blue: !!opencv-matrix
    rows: 2
    cols: 3
    dt: i
-   data: [ 3, 205, 236, 74, 256, 226 ]
-Orange: !!opencv-matrix
+   data: [ 51, 255, 254, 152, 256, 256 ]
+Yellow: !!opencv-matrix
    rows: 2
    cols: 3
    dt: i
-   data: [ 3, 205, 236, 74, 256, 226 ]
+   data: [ 23, 190, 254, 49, 256, 256 ]
 HDR: 300
