--- a/data/color_calibration.yaml
+++ b/data/color_calibration.yaml
@@ -3,15 +3,15 @@ Yellow: !!opencv-matrix
    rows: 2
    cols: 3
    dt: i
-   data: [ 1, 255, 254, 35, 256, 256 ]
+   data: [ 30, 193, 255, 33, 256, 256 ]
+Orange: !!opencv-matrix
+   rows: 2
+   cols: 3
+   dt: i
+   data: [ 1, 255, 255, 26, 256, 256 ]
 Blue: !!opencv-matrix
    rows: 2
    cols: 3
    dt: i
-   data: [ 51, 255, 254, 152, 256, 256 ]
-Yellow: !!opencv-matrix
-   rows: 2
-   cols: 3
-   dt: i
-   data: [ 23, 190, 254, 49, 256, 256 ]
+   data: [ 70, 255, 255, 151, 256, 256 ]
 HDR: 300
