Kalman code started

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,3 +111,7 @@ add_executable(show_kinect_camera
   src/camera/show_kinect_camera.cpp)
 add_dependencies(show_kinect_camera unball_gencpp)
 target_link_libraries(show_kinect_camera ${catkin_LIBRARIES})
+
+
+catkin_install_python(PROGRAMS kalman.py
+                      DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
