Pixel to metric now compiling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,8 @@ add_executable(vision_node
   src/vision/tracked_object.cpp
   src/vision/tracker.cpp
   src/vision/vision.cpp
-  src/vision/vision_gui.cpp)
+  src/vision/vision_gui.cpp
+ )
 add_dependencies(vision_node unball_gencpp)
 target_link_libraries(vision_node ${catkin_LIBRARIES})
 
@@ -112,5 +113,10 @@ add_executable(show_kinect_camera
 add_dependencies(show_kinect_camera unball_gencpp)
 target_link_libraries(show_kinect_camera ${catkin_LIBRARIES})
 
+
+add_executable(pixel_to_metric_conversion
+  src/pixel_to_metric_conversion/pixel_to_metric_conversion_node.cpp)
+add_dependencies(pixel_to_metric_conversion unball_gencpp)
+target_link_libraries(pixel_to_metric_conversion ${catkin_LIBRARIES})
 
 
