--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ add_executable(vision_node
   src/vision/dummy_identification_algorithm.cpp
   src/vision/dummy_segmentation_algorithm.cpp
   src/vision/find_robots_by_color.cpp
+  src/vision/hsv_in_range_color_segmentation.cpp
   src/vision/robot_identification.cpp
   src/vision/identification_algorithm.cpp
   src/vision/identifier.cpp
