--- a/data/camera-settings.config
+++ b/data/camera-settings.config
@@ -1,17 +1,12 @@
-9963776:                     Brightness:91
-9963777:                       Contrast:104
-9963778:                     Saturation:96
-9963788:White Balance Temperature, Auto:0
-9963795:                           Gain:0
+9963776:                     Brightness:57
+9963777:                       Contrast:100
+9963778:                     Saturation:100
+9963779:                            Hue:0
+9963788:White Balance Temperature, Auto:1
+9963792:                          Gamma:300
 9963800:           Power Line Frequency:2
-9963802:      White Balance Temperature:4257
-9963803:                      Sharpness:128
+9963802:      White Balance Temperature:4600
+9963803:                      Sharpness:50
 9963804:         Backlight Compensation:0
-10094849:                 Exposure, Auto:1
-10094850:            Exposure (Absolute):297
-10094851:        Exposure, Auto Priority:0
-10094856:                 Pan (Absolute):0
-10094857:                Tilt (Absolute):0
-10094858:               Focus (absolute):0
-10094860:                    Focus, Auto:0
-10094861:                 Zoom, Absolute:100
+10094849:                 Exposure, Auto:3
+10094851:        Exposure, Auto Priority:1
